// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should contain correct values for spacing 1`] = `
{
  "fluid": {
    "large": "clamp(32px, 2.75vw + 23px, 76px)",
    "medium": "clamp(16px, 1.25vw + 12px, 36px)",
    "small": "clamp(8px, 0.5vw + 6px, 16px)",
    "xLarge": "clamp(48px, 3vw + 38px, 96px)",
    "xSmall": "clamp(4px, 0.25vw + 3px, 8px)",
    "xxLarge": "clamp(80px, 7.5vw + 56px, 200px)",
  },
  "static": {
    "large": "32px",
    "medium": "16px",
    "small": "8px",
    "xLarge": "48px",
    "xSmall": "4px",
    "xxLarge": "80px",
  },
}
`;

exports[`should contain correct values for spacingFluid 1`] = `
{
  "large": "clamp(32px, 2.75vw + 23px, 76px)",
  "medium": "clamp(16px, 1.25vw + 12px, 36px)",
  "small": "clamp(8px, 0.5vw + 6px, 16px)",
  "xLarge": "clamp(48px, 3vw + 38px, 96px)",
  "xSmall": "clamp(4px, 0.25vw + 3px, 8px)",
  "xxLarge": "clamp(80px, 7.5vw + 56px, 200px)",
}
`;

exports[`should contain correct values for spacingFluidLarge 1`] = `"clamp(32px, 2.75vw + 23px, 76px)"`;

exports[`should contain correct values for spacingFluidMedium 1`] = `"clamp(16px, 1.25vw + 12px, 36px)"`;

exports[`should contain correct values for spacingFluidSmall 1`] = `"clamp(8px, 0.5vw + 6px, 16px)"`;

exports[`should contain correct values for spacingFluidXLarge 1`] = `"clamp(48px, 3vw + 38px, 96px)"`;

exports[`should contain correct values for spacingFluidXSmall 1`] = `"clamp(4px, 0.25vw + 3px, 8px)"`;

exports[`should contain correct values for spacingFluidXXLarge 1`] = `"clamp(80px, 7.5vw + 56px, 200px)"`;

exports[`should contain correct values for spacingStatic 1`] = `
{
  "large": "32px",
  "medium": "16px",
  "small": "8px",
  "xLarge": "48px",
  "xSmall": "4px",
  "xxLarge": "80px",
}
`;

exports[`should contain correct values for spacingStaticLarge 1`] = `"32px"`;

exports[`should contain correct values for spacingStaticMedium 1`] = `"16px"`;

exports[`should contain correct values for spacingStaticSmall 1`] = `"8px"`;

exports[`should contain correct values for spacingStaticXLarge 1`] = `"48px"`;

exports[`should contain correct values for spacingStaticXSmall 1`] = `"4px"`;

exports[`should contain correct values for spacingStaticXXLarge 1`] = `"80px"`;
